🚩fixed the CSS alignments

--- a/src/components/project-profile/projectprofile.styles.css
+++ b/src/components/project-profile/projectprofile.styles.css
@@ -1,32 +1,42 @@
 .project-profile{
-    padding: 1rem 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10rem;
+}
+.project-banner img{
+    /* width: 100%; */
+    height: 40rem;
+}
+.project-container{
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.project-banner{
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-}
-
 .project-resource{
     display: flex;
-    width: 50%;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .link-to{
-    width: 50%;
+    width: 30rem;
+    
 }
 .tech-stack-div{
-    width: 50%;
+    width: 30rem;
+
 }
 
+/* Tech container */
 .techused{
     height: 2rem;
-    width: 45%;
+    width: 12rem;
     background-color: rgba(156, 156, 156, 0.226);
     display: flex;
     align-items: center;
@@ -47,7 +57,7 @@
 }
 
 .github-link{
-    width: 90%;
+    width: 25rem;
     height: 2.5rem;
     background-color: rgb(58, 58, 58);
     border-radius: 5px;
